# remote_render

./: Cargo.toml  Dockerfile  build.rs
assets/models/: box.glb  robot.glb  shelf.glb
proto/: remote_render.proto
src/: client.rs  egui.rs  headless_render.rs  render.rs  server.rs  server_main.rs  server_plugin.rs  testplugin.rs
test/: normal_material.rs  normals.wgsl  scene.rs  server_plugin.rs
