[package]
name = "remote_render"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remote_render-client"
path = "src/client.rs"

[[bin]]
name = "remote_render-server_plugin"
path = "src/server_plugin.rs"

[[bin]]
name = "remote_render-headless_render"
path = "src/headless_render.rs"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "persistence"] }
bevy = "0.14.2"
chrono = "0.4"
rdev = "0.5"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
h2 = "0.4.5"
crossbeam-channel = "0.5"
bevy-tokio-tasks = "0.14.0"



[build-dependencies]
tonic-build = "0.12"

[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3